fix: fixed alignment issue in add payment slideout in billing page

--- a/src/scss/filejet-scss/_bootstrap.scss
+++ b/src/scss/filejet-scss/_bootstrap.scss
@@ -2332,10 +2332,9 @@ textarea.form-control-lg {
   display: block;
   min-height: 1.5rem;
   padding-left: 2rem;
-  margin-bottom: 0.125rem;
   label {
     margin: 0;
-    position: relative;
+    // position: relative;
     // top: 5px;
   }
 }
